# SimpleLibraryManageSystem

./: App.cpp  App.h  BookManageAddMenu.cpp  BookManageAddMenu.h  BookManageDeleteMenu.cpp  BookManageDeleteMenu.h  BookManageMenu.cpp  BookManageMenu.h  BookManageUpdateMenu.cpp  BookManageUpdateMenu.h  BookManager.cpp  BookManager.h  BorrowManageBorrowMenu.cpp  BorrowManageBorrowMenu.h  BorrowManageHistoryMenu.cpp  BorrowManageHistoryMenu.h  BorrowManageMenu.cpp  BorrowManageMenu.h  BorrowManageReturnMenu.cpp  BorrowManageReturnMenu.h  BorrowManager.cpp  BorrowManager.h  BorrowerManageAddMenu.cpp  BorrowerManageAddMenu.h  BorrowerManageBorrowHistoryMenu.cpp  BorrowerManageBorrowHistoryMenu.h  BorrowerManageBorrowingMenu.cpp  BorrowerManageBorrowingMenu.h  BorrowerManageDelete.cpp  BorrowerManageDelete.h  BorrowerManageMenu.cpp  BorrowerManageMenu.h  BorrowerManageUpdateMenu.cpp  BorrowerManageUpdateMenu.h  BorrowerManager.cpp  BorrowerManager.h  CMakeLists.txt  DataManager.cpp  DataManager.h  ItemListMenu.cpp  (+11 more)
Manager/: BookManager.cpp  BookManager.h  BorrowManager.cpp  BorrowManager.h  BorrowerManager.cpp  BorrowerManager.h  DataManager.cpp  DataManager.h  MenuManager.h
Menu/: ItemListMenu.cpp  MainMenu.cpp  Menu.cpp
Menu/BookManageMenu/: BookManageAddMenu.cpp  BookManageAddMenu.h  BookManageDeleteMenu.cpp  BookManageDeleteMenu.h  BookManageMenu.cpp  BookManageMenu.h  BookManageUpdateMenu.cpp  BookManageUpdateMenu.h
Menu/BorrowManageMenu/: BorrowManageBorrowMenu.cpp  BorrowManageBorrowMenu.h  BorrowManageHistoryMenu.cpp  BorrowManageMenu.h  (+4 more)
RixJson/: CMakeLists.txt
(+15 files in other folders)
